Correction de l'emplacement de certains assets

--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -15,14 +15,14 @@
                 </li>
                 <li class="py-sm-2">
                     <a href="{{ path('issuesList', {'id_project': project.id}) }}">
-                        <img class="icon" src="{{ asset('build/images/view_list.svg') }}" alt="Issues">
+                        <img class="icon" src="{{ asset('build/images/issues.svg') }}" alt="Issues">
                         <span class="d-none d-sm-inline">Liste des issues</span>
                     </a>
                 </li>
                 <li class="py-sm-2">
                     <a href="{{ path('createIssue', {'id_project': project.id}) }}">
                         <img class="icon" src="{{ asset('build/images/add.svg') }}" alt="NewIssue">
-                        <span class="d-none d-sm-inline">nouvelle issue</span>
+                        <span class="d-none d-sm-inline">Nouvelle issue</span>
                     </a>
                 </li>
             </ul>
