--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -1,17 +1,19 @@
-{% extends "base.html.twig" %}
+{% extends 'project_frame.html.twig' %}
 
 {% block title %}Editer un projet{% endblock %}
 
-{% block body %}
+{% block content %}
 
-    <div id="project-edit-container" class="container border rounded" style="margin-top:10%; max-width:750px;">
-        <div style="margin-top:15px; margin-bottom:15px;">
-            {{ form_start(form) }}
-            {{ form_errors(form) }}
-            {{ form_row(form.name) }}
-            {{ form_row(form.description) }}
-            <button type="submit" class="btn btn-primary">Modifier le Projet</button>
-            {{ form_end(form) }}
+    <div id="project-edit-container" class="container" style="padding-top:10%">
+        <div class="card">
+            <div class="card-body">
+                {{ form_start(form) }}
+                {{ form_errors(form) }}
+                {{ form_row(form.name) }}
+                {{ form_row(form.description) }}
+                <button type="submit" class="btn btn-primary">Modifier le Projet</button>
+                {{ form_end(form) }}
+            </div>
         </div>
     </div>
 
