--- a/templates/issue/issue_form.html.twig
+++ b/templates/issue/issue_form.html.twig
@@ -1,9 +1,10 @@
 {% extends 'project_frame.html.twig' %}
 
-{% block title %}Création d'un issue{% endblock %}
+{% block title %}Création d'une issue{% endblock %}
 
 {% block content %}
-    <div id="issue-container" class="container" style="padding-top:10%;">
+
+    <div class="container" style="padding-top:10%;">
         <div class="card">
             <div class="card-body">
                 {{ form_start(form) }}
@@ -13,8 +14,8 @@
                 {{ form_row(form.difficulty) }}
                 {{ form_row(form.priority,{'label': 'Priorité'},{ 'separator': '----------' }) }}
                 {{ form_row(form.status,{'label': 'Statut'},{ 'separator': '----------' }) }}
-                <button type="submit" class="btn btn-primary btn-dark">Créer l'issue</button>
-                <a class="btn waves-effect waves-light red" href="/home">Annuler</a>
+                <button type="submit" class="btn btn-primary">Créer l'issue</button>
+                <a class="btn btn-outline-danger" href="{{ path('issuesList', {'id_project' : project.id}) }}">Annuler</a>
                 {{ form_end(form) }}
             </div>
         </div>
