--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -46,7 +46,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            <p> Vous n'avez pour l'instant aucun projet associés.</p>
+                            <p> Vous n'avez pour l'instant aucun projet associé.</p>
                         {% endif %}
                     </div>
                 </div>
