--- a/templates/task/task_form.html.twig
+++ b/templates/task/task_form.html.twig
@@ -1,6 +1,6 @@
 {% extends 'project_frame.html.twig' %}
 
-{% block title %}Création d'un issue{% endblock %}
+{% block title %}Création d'un tâche{% endblock %}
 
 {% block content %}
     <div class="container" style="padding-top:10%;">
