--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -11,7 +11,7 @@
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
                 {{ form_row(form.description) }}
-                <button type="submit" class="btn btn-primary">Modifier le Projet</button>
+                <button type="submit" class="btn btn-primary">Modifier le projet</button>
                 {{ form_end(form) }}
             </div>
         </div>
