Suppression de code CSS mort + correction markup formulaires de création/édition de projet

--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div id="project-edit-container" class="container" style="padding-top:10%">
+    <div class="container" style="padding-top:10%">
         <div class="card">
             <div class="card-body">
                 {{ form_start(form) }}
