--- a/templates/project/creation.html.twig
+++ b/templates/project/creation.html.twig
@@ -1,22 +1,20 @@
-{% extends "base.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Création de projet{% endblock %}
 
 {% block body %}
 
-    <div id="project-container" class="container border rounded" style="margin-top:10%; max-width:750px;">
-        <div style="margin-top:15px; margin-bottom:15px;">
-            {{ form_start(form) }}
-            <h3>Nouveau projet :</h3>
-            {{ form_errors(form) }}
-            <div class="form-group">
+    <div class="container" style="margin-top:10%;">
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Nouveau projet :</h3>
+                {{ form_start(form) }}
+                {{ form_errors(form) }}
                 {{ form_row(form.name) }}
-            </div>
-            <div class="form-group">
                 {{ form_row(form.description) }}
+                <button type="submit" class="btn btn-primary">Créer le projet</button>
+                {{ form_end(form) }}
             </div>
-            <button type="submit" class="btn btn-primary btn-dark">Créer le Projet</button>
-            {{ form_end(form) }}
         </div>
     </div>
 
