--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -8,9 +8,9 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title mb-4">Issues </h3>
-                {% if myIssues is not empty %}
+                {% if issues is not empty %}
                     <ul class="list-group">
-                        {% for index, issue in myIssues %}
+                        {% for index, issue in issues %}
                             <li class="list-group-item">
                                 <div class="row">
                                     <div class="col-md-6 col-lg-8">
@@ -39,7 +39,7 @@
                                 {% endblock %}
                                 {% block footer %}
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
-                                    <a href="{{ path('deleteIssue', {'myProject_id':project.id,'issue_id':issue.id }) }}" class="btn btn-primary">Oui</a>
+                                    <a href="{{ path('deleteIssue', {'id_project' : project.id,'id_issue' : issue.id }) }}" class="btn btn-primary">Oui</a>
                                 {% endblock %}
                             {% endembed %}
                         {% endfor %}
