--- a/templates/issue/issue_form.html.twig
+++ b/templates/issue/issue_form.html.twig
@@ -4,10 +4,11 @@
 
 {% block content %}
 
-    <div class="container" style="padding-top:10%;">
-        <div class="card">
-            <div class="card-body">
+    <div id="new-issue-container" class="container" style="padding-top:10%; max-width:750px;">
+        <div class="container border rounded">
+            <div style="margin-top:5%; margin-bottom:5%;">
                 {{ form_start(form) }}
+                <h3>Créer une issue :</h3>
                 {{ form_errors(form) }}
                 {{ form_row(form.name) }}
                 {{ form_row(form.description) }}
