--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -20,6 +20,12 @@
                     </a>
                 </li>
                 <li class="py-sm-2">
+                    <a href="{{ path('tasksList', {'id_project': project.id}) }}">
+                        <img class="icon" src="{{ asset('build/images/tasks.svg') }}" alt="Issues">
+                        <span class="d-none d-sm-inline">Liste des tâches</span>
+                    </a>
+                </li>
+                <li class="py-sm-2">
                     <a href="{{ path('createIssue', {'id_project': project.id}) }}">
                         <img class="icon" src="{{ asset('build/images/add.svg') }}" alt="NewIssue">
                         <span class="d-none d-sm-inline">Nouvelle issue</span>
