--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'project_frame.html.twig' %}
 
-{% block title %}Création d'une tâche{% endblock %}
+{% block title %}Edition d'une tâche{% endblock %}
 
 {% block content %}
     <div class="container" style="padding-top:10%;">
@@ -13,10 +13,10 @@
                 {{ form_row(form.requiredManDays) }}
                 {{ form_row(form.developper) }}
                 {{ form_row(form.relatedIssues) }}
-                <button type="submit" class="btn btn-primary">Créer la tâche</button>
+                <button type="submit" class="btn btn-primary">Modifier la tâche</button>
+                <a class="btn btn-outline-danger" href="{{ path('tasksList', {'id_project' : project.id}) }}">Annuler</a>
                 {{ form_end(form) }}
             </div>
         </div>
     </div>
-
 {% endblock %}
