Correction d'une erreur de lien : le lien vers la liste des sprints renvoyait vers la liste des issues

--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -19,7 +19,7 @@
                         <span class="d-none d-sm-inline">Sprints</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="{{ path('issuesList', {'id_project': project.id}) }}">
+                        <a class="dropdown-item" href="{{ path('sprintsList', {'id_project': project.id}) }}">
                             <img class="icon" src="{{ asset('build/images/list.svg') }}" alt="Sprints">
                             <span class="d-none d-sm-inline">Liste des sprints</span>
                         </a>
