--- a/templates/project/project_details.html.twig
+++ b/templates/project/project_details.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div id="login-container" class="container" style="padding-top:10%;">
+    <div class="container">
         <div class="row">
             <div class="col-sm-6 col-lg-8">
                 <div class="card">
