--- a/templates/release/release_form.html.twig
+++ b/templates/release/release_form.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div id="new-release-container" class="container" style="padding-top:10%; max-width:750px;">
+    <div class="container">
         <div class="container border rounded">
             <div style="margin-top:5%; margin-bottom:5%;">
                 {{ form_start(form) }}
