--- a/templates/task/edit.html.twig
+++ b/templates/task/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edition d'une tâche{% endblock %}
 
 {% block content %}
-    <div class="container" style="padding-top:10%;">
+    <div class="container">
         <div class="card">
             <div class="card-body">
                 {{ form_start(form) }}
