--- a/templates/task/task_list.html.twig
+++ b/templates/task/task_list.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Liste des tâches{% endblock %}
 
 {% block content %}
-    <div class="container" style="padding-top:10%;">
+    <div class="container">
         {% if todos is not empty or doings is not empty or dones is not empty %}
             <div class="row">
                 <div class="col-12 px-0 px-lg-1 text-center mb-2">
