--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="container" style="padding-top:10%;">
+    <div class="container">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title mb-4">Issues </h3>
