--- a/templates/project/edit.html.twig
+++ b/templates/project/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="container" style="padding-top:10%">
+    <div class="container">
         <div class="card">
             <div class="card-body">
                 {{ form_start(form) }}
