--- a/templates/project/project_members.html.twig
+++ b/templates/project/project_members.html.twig
@@ -1,4 +1,4 @@
-<div id="project-member-container">
+<div>
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">Liste des membres</h5>
