--- a/templates/project_frame.html.twig
+++ b/templates/project_frame.html.twig
@@ -89,7 +89,7 @@
         </div>
         <div id="content">
             {% if project is defined and project is not null %}
-            <h1 style="padding-top:5%; text-align:center;">
+            <h1 style="padding-top:5%; text-align:center; margin-bottom: 10%;">
             {{ project.getName() }}
             </h1>
             {% endif %}
