--- a/templates/test/test_list.html.twig
+++ b/templates/test/test_list.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="container" style="padding-top:10%;">
+    <div class="container">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title mb-4">Tests </h3>
@@ -47,5 +47,6 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
 
